# brush3D

./: .gitignore  CMakeLists.txt  ObjViewer.pro  README.md  main.cpp  mainglwidget.cpp  resources.qrc
brush/: CMakeLists.txt
brush/include/: abstractbrush.hpp  brushstroke.hpp  colorchange.hpp  idsstorage.hpp  matrix.hpp  objectmodel.hpp  pixelsfastbrush.hpp
brush/src/: abstractbrush.cpp  brushstroke.cpp  colorchange.cpp  idsstorage.cpp  objectmodel.cpp  pixelsfastbrush.cpp
brush/src/details/: brushutils.cpp  brushutils.hpp  face.cpp  face.hpp  geometry.cpp  geometry.hpp  utils.cpp  utils.hpp
brush_gui/: CMakeLists.txt
brush_gui/resources/shaders/: fshaderForIds.glsl  vshader.glsl  vshaderForIds.glsl
brush_gui/src/: brushhistory.hpp  controller.cpp  controller.hpp
brush_gui/src/ui/: mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.ui
brush_ui/: CMakeLists.txt
brush_ui/resources/shaders/: fshader.glsl
brush_ui/src/: brushhistory.cpp  brushhistory.hpp  controller.cpp  controller.hpp  main.cpp
brush_ui/src/ui/: mainglwidget.cpp  mainglwidget.h  mainwindow.h  vertexforbuffer.h
resources/: fragment_shader.frag  vertex_shader.vert
resources/shaders/: fshader.glsl
src/: MainView.cpp  MainView.h  ObjViewer.pro  abstractbrush.cpp  abstractbrush.h  brush.cpp  brush.h  brushhistory.cpp  brushhistory.h  brushhistory.hpp  brushstroke.cpp  brushstroke.h  color.h  controller.cpp  controller.h  controller.hpp  fshader.glsl  geometry.cpp  geometry.h  idsstorage.cpp  load_shaders.cpp  main.cpp  mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.ui  objloader.cpp  pixelsfastbrush.cpp  pixelsfastbrush.h  pixelspaintingbrush.cpp  pixelspaintingbrush.h  slowraysbrush.cpp  slowraysbrush.h  transform3d.cpp  transform3d.h  vertex.h  vshader.glsl
src/brush/: CMakeLists.txt  abstractbrush.cpp  abstractbrush.h  brush.h  brushhistory.cpp  brushhistory.h  brushstroke.cpp  brushstroke.h  pixelsfastbrush.cpp  pixelsfastbrush.h  pixelspaintingbrush.cpp  pixelspaintingbrush.h  slowraysbrush.cpp
src/brush/details/: brushutils.cpp  brushutils.h  brushutils.hpp  face.cpp  face.h  geometry.cpp  geometry.hpp
src/brush/include/: abstractbrush.h  brushstroke.h  pixelsfastbrush.h
src/brush/model/: brushutils.cpp  brushutils.h  color.cpp  colorchange.cpp  colorchange.h  colorchanges.cpp  colorchanges.h  face.cpp  face.h  geometry.cpp  geometry.h  idsstorage.cpp  idsstorage.h  matrix.h  objectmodel.cpp  objectmodel.h  texturestorage.cpp  texturestorage.h
src/brush/src/: abstractbrush.cpp  brushstroke.cpp  colorchange.cpp  objectmodel.cpp  pixelsfastbrush.cpp
src/ui/: mainglwidget.cpp  mainglwidget.h  mainwindow.cpp  mainwindow.h  vertexforbuffer.h
